gallery and quotes pages added

--- a/html-feladatok-bemutatkozo/pages/about.html
+++ b/html-feladatok-bemutatkozo/pages/about.html
@@ -11,13 +11,76 @@
     <header>
       <a href="index.html"> Marvel Cinematic Universe </a>
       <nav>
-        <a class="nav-link" href="works.html">Works</a>
+        <a class="nav-link" href="quotes.html">Quotes</a>
         <a class="nav-link" href="gallery.html">Gallery</a>
         <a class="nav-link" href="about.html">About</a>
       </nav>
     </header>
     <main>
-      <section></section>
+      <section class="about-top-section">
+        <img
+          class="about-img"
+          src="../images/eating.jpg"
+          alt="Superheros eating together"
+        />
+        <div class="top-films">
+          <h2>Top 7 Marvel Movies (Paul Bettany)</h2>
+          <ol>
+            <li>Black Panther (2018)</li>
+            <li>Guardians of the Galaxy (2014)</li>
+            <li>Iron Man (2008)</li>
+            <li>Thor: Ragnarok (2017)</li>
+            <li>Captain America: Civil War (2016)</li>
+            <li>Avengers: Endgame</li>
+            <li>The Avengers (2012)</li>
+          </ol>
+        </div>
+        <div class="fun-facts">
+          <h2>Marvel Movie Facts</h2>
+          <ul>
+            <li>
+              There's a very strange reason why Captain America isn't eating in
+              a post-credits scene of The Avengers.
+            </li>
+            <li>Agent Coulson wasn't even supposed to have a name.</li>
+            <li>Thor: Ragnarok has a much different title in Japan.</li>
+            <li>
+              Maria's call sign in Captain Marvel references a possible future
+              MCU hero.
+            </li>
+            <li>Doctor Strange was almost a horror movie.</li>
+            <li>
+              The first person to play Ant-Man onscreen appears in the first
+              movie—and it's not Paul Rudd.
+            </li>
+            <li>
+              The war rhinos in Black Panther were played by really big horses.
+            </li>
+            <li>
+              Robert Downey Jr. snuck some tasty props onto the Avengers:
+              Endgame set.
+            </li>
+            <li>
+              The villain of Spider-Man: Far From Home almost played the hero
+              instead.
+            </li>
+            <li>Peter Quill's ship is named after an '80s icon.</li>
+            <li>The X-Men almost crossed over with Captain America.</li>
+            <li>
+              An Oscar winner scored Marvel creator Stan Lee's dream role.
+            </li>
+          </ul>
+        </div>
+      </section>
+      <section>
+        <div class="form-container">
+          <h2 class="form-title">Contact us</h2>
+          <input type="text" class="field" placeholder="Your Name">
+          <input type="text" class="field" placeholder="Your Email">
+          <textarea class="field" placeholder="Message"></textarea>
+          <button class="form-button">Send</button>
+        </div>
+      </section>
     </main>
     <footer></footer>
   </body>
