--- a/html-feladatok-bemutatkozo/pages/gallery.html
+++ b/html-feladatok-bemutatkozo/pages/gallery.html
@@ -11,7 +11,7 @@
     <header>
       <a href="index.html"> Marvel Cinematic Universe </a>
       <nav>
-        <a class="nav-link" href="works.html">Works</a>
+        <a class="nav-link" href="quotes.html">Quotes</a>
         <a class="nav-link" href="gallery.html">Gallery</a>
         <a class="nav-link" href="about.html">About</a>
       </nav>
@@ -30,7 +30,15 @@
               <img class="gallery-img" src="../images/spider-man.jpg" alt="spiderman">
               <img class="gallery-img" src="../images/star-lord.jpg" alt="starlord">
               <img class="gallery-img" src="../images/moon_knight.jpg" alt="moon knight">
+              <img class="gallery-img" src="../images/vision.jpeg" alt="vision">
               <img class="gallery-img" src="../images/Agent-Venom-Comic-Books.jpg" alt="agent venom">
+              <img class="gallery-img" src="../images/hawkey.jpg" alt="hawkey">
+              <img class="gallery-img" src="../images/m'baku.jpg" alt="m'baku">
+              <img class="gallery-img" src="../images/war-machine.jpg" alt="war-machine">
+              <img class="gallery-img" src="../images/falcon.jpg" alt="falcon">
+              <img class="gallery-img" src="../images/BlackPanther.jpg" alt="black panther">
+              <img class="gallery-img" src="../images/valkyrie.png" alt="valkyrie">
+              <img class="gallery-img" src="../images/rocket.jpg" alt="rocket">
           </div>
       </section>
     </main>
