--- a/html-feladatok-bemutatkozo/pages/index.html
+++ b/html-feladatok-bemutatkozo/pages/index.html
@@ -12,12 +12,12 @@
     <header>
       <a href="index.html"> Marvel Cinematic Universe </a>
       <nav>
-        <a class="nav-link" href="works.html">Works</a>
+        <a class="nav-link" href="quotes.html">Quotes</a>
         <a class="nav-link" href="gallery.html">Gallery</a>
         <a class="nav-link" href="about.html">About</a>
       </nav>
     </header>
-    <main>
+    <main class="index-main">
       <section>
           <p>
             The Marvel Cinematic Universe (MCU) is an American media franchise and shared universe centered on a series of superhero films produced by Marvel Studios. The films are based on characters that appear in American comic books published by Marvel Comics. The franchise also includes television series, short films, digital series, and literature. The shared universe, much like the original Marvel Universe in comic books, was established by crossing over common plot elements, settings, cast, and characters.
@@ -31,25 +31,25 @@
           <div id="highlights">
               <section>
                   <div class="content">
-                      <p>GOOD</p>
+                      <p>REPRESENTS MORAL VALUE</p>
                   </div>
               </section>
               <section>
                   <div class="content">
-                      <p>BETTER</p>
+                      <p>INTERESTING</p>
                   </div>
               </section>
               <section>
                   <div class="content">
-                      <p>THE BEST</p>
+                      <p>CHARACTERIZED BY DIVERSITY</p>
                   </div>
               </section>
           </div>
       </section>
     </main>
     <footer>
-        <button>
-            <a href="">Back to top</a>
+        <button class="top-button">
+            <a class="footer-btn-a" href="#top">Back to top</a>
         </button>
     </footer>
   </body>
