--- a/css-feladatok-admin/index.html
+++ b/css-feladatok-admin/index.html
@@ -5,18 +5,102 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="./css/main.css">
-    <link rel="stylesheet" href="./css/font-awesome-4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="./css/main.css" />
+    <link
+      rel="stylesheet"
+      href="./css/font-awesome-4.7.0/css/font-awesome.min.css"
+    />
   </head>
   <body>
     <header class="header--dark">
       <h3 class="header__title">Admin Page</h3>
       <div class="header__search">
-        <input type="text" class="search__input">
+        <input type="text" class="search__input" />
         <button class="search__btn">
-            <i class="fa fa-search" aria-hidden="true"></i>
+          <i class="fa fa-search" aria-hidden="true"></i>
         </button>
       </div>
     </header>
+    <main>
+      <aside>
+        <nav class="main__nav">
+          <ul class="nav__ul">
+            <li class="nav__title">
+              <a href="">CORE</a>
+            </li>
+            <li class="nav__li">
+              <a href="">
+                <i class="fa fa-tachometer nav__link--actual" aria-hidden="true"></i>
+                <span class="nav__link--actual">Dashboard</span></a
+              >
+            </li>
+            <li class="nav__title">
+              <a href="">INTERFACE</a>
+            </li>
+            <li class="nav__li">
+              <a href="">
+                <i class="fa fa-window-restore" aria-hidden="true"></i>
+                Layouts</a
+              >
+            </li>
+            <li class="nav__li">
+              <a href="">
+                <i class="fa fa-bookmark" aria-hidden="true"></i>
+                Pages</a
+              >
+            </li>
+            <li class="nav__title">
+              <a href="">ADDONS</a>
+            </li>
+            <li class="nav__li">
+              <a href="">
+                <i class="fa fa-area-chart" aria-hidden="true"></i>
+                Charts</a
+              >
+            </li>
+            <li class="nav__li">
+              <a href="">
+                <i class="fa fa-table" aria-hidden="true"></i>
+                Tables</a
+              >
+            </li>
+          </ul>
+        </nav>
+      </aside>
+      <section class="content">
+        <h1 class="content__h1">Dashboard</h1>
+        <div class="main__breadcrumb">Dashboard</div>
+        <div class="main__cards">
+            <div class="main__card main__card--blue">
+                <div class="card__top">Primary Card</div>
+                <div class="card__bottom">
+                    View Details
+                    <i class="fa fa-chevron-right" aria-hidden="true"></i>
+                </div>
+            </div>
+            <div class="main__card main__card--yellow">
+                <div class="card__top">Warning Card</div>
+                <div class="card__bottom">
+                    View Details
+                    <i class="fa fa-chevron-right" aria-hidden="true"></i>
+                </div>
+            </div>
+            <div class="main__card main__card--green">
+                <div class="card__top">Success Card</div>
+                <div class="card__bottom">
+                    View Details
+                    <i class="fa fa-chevron-right" aria-hidden="true"></i>
+                </div>
+            </div>
+            <div class="main__card main__card--red">
+                <div class="card__top">Danger Card</div>
+                <div class="card__bottom">
+                    View Details
+                    <i class="fa fa-chevron-right" aria-hidden="true"></i>
+                </div>
+            </div>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
