responsive cards and responsive navbar added

--- a/css-feladatok-admin/index.html
+++ b/css-feladatok-admin/index.html
@@ -26,42 +26,45 @@
         <nav class="main__nav">
           <ul class="nav__ul">
             <li class="nav__title">
-              <a href="">CORE</a>
+              <a href=""><span class="nav__text">CORE</span></a>
             </li>
             <li class="nav__li">
               <a href="">
-                <i class="fa fa-tachometer nav__link--actual" aria-hidden="true"></i>
-                <span class="nav__link--actual">Dashboard</span></a
+                <i
+                  class="fa fa-tachometer nav__link--actual"
+                  aria-hidden="true"
+                ></i>
+                <span class="nav__link--actual nav__text">Dashboard</span></a
               >
             </li>
             <li class="nav__title">
-              <a href="">INTERFACE</a>
+              <a href=""><span class="nav__text">INTERFACE</span></a>
             </li>
             <li class="nav__li">
               <a href="">
                 <i class="fa fa-window-restore" aria-hidden="true"></i>
-                Layouts</a
+                <span class="nav__text">Layouts</span></a
               >
             </li>
             <li class="nav__li">
               <a href="">
                 <i class="fa fa-bookmark" aria-hidden="true"></i>
-                Pages</a
+                <span class="nav__text">Pages</span></a
               >
             </li>
             <li class="nav__title">
-              <a href="">ADDONS</a>
+              <a href=""><span class="nav__text">ADDONS</span></a>
             </li>
             <li class="nav__li">
               <a href="">
                 <i class="fa fa-area-chart" aria-hidden="true"></i>
-                Charts</a
+                <span class="nav__text">Charts</span></a
               >
             </li>
             <li class="nav__li">
               <a href="">
                 <i class="fa fa-table" aria-hidden="true"></i>
-                Tables</a
+                <span class="nav__text">Tables</span></a
               >
             </li>
           </ul>
@@ -71,34 +74,34 @@
         <h1 class="content__h1">Dashboard</h1>
         <div class="main__breadcrumb">Dashboard</div>
         <div class="main__cards">
-            <div class="main__card main__card--blue">
-                <div class="card__top">Primary Card</div>
-                <div class="card__bottom">
-                    View Details
-                    <i class="fa fa-chevron-right" aria-hidden="true"></i>
-                </div>
+          <div class="main__card main__card--blue">
+            <div class="card__top">Primary Card</div>
+            <div class="card__bottom">
+              View Details
+              <i class="fa fa-chevron-right" aria-hidden="true"></i>
             </div>
-            <div class="main__card main__card--yellow">
-                <div class="card__top">Warning Card</div>
-                <div class="card__bottom">
-                    View Details
-                    <i class="fa fa-chevron-right" aria-hidden="true"></i>
-                </div>
+          </div>
+          <div class="main__card main__card--yellow">
+            <div class="card__top">Warning Card</div>
+            <div class="card__bottom">
+              View Details
+              <i class="fa fa-chevron-right" aria-hidden="true"></i>
             </div>
-            <div class="main__card main__card--green">
-                <div class="card__top">Success Card</div>
-                <div class="card__bottom">
-                    View Details
-                    <i class="fa fa-chevron-right" aria-hidden="true"></i>
-                </div>
+          </div>
+          <div class="main__card main__card--green">
+            <div class="card__top">Success Card</div>
+            <div class="card__bottom">
+              View Details
+              <i class="fa fa-chevron-right" aria-hidden="true"></i>
             </div>
-            <div class="main__card main__card--red">
-                <div class="card__top">Danger Card</div>
-                <div class="card__bottom">
-                    View Details
-                    <i class="fa fa-chevron-right" aria-hidden="true"></i>
-                </div>
+          </div>
+          <div class="main__card main__card--red">
+            <div class="card__top">Danger Card</div>
+            <div class="card__bottom">
+              View Details
+              <i class="fa fa-chevron-right" aria-hidden="true"></i>
             </div>
+          </div>
         </div>
       </section>
     </main>
