--- a/js-4-feladatok-game-of-thrones/html/index.html
+++ b/js-4-feladatok-game-of-thrones/html/index.html
@@ -38,7 +38,7 @@
             <div class="search_icon_wrapper">
               <i class="fas fa-search"></i>
             </div>
-            <input type="text" />
+            <input class="input" type="text" />
           </div>
         </div>
       </div>
