--- a/bs-feladatok-login/login.html
+++ b/bs-feladatok-login/login.html
@@ -22,7 +22,7 @@
             <span class="icon-text">F</span>
           </div>
         </div>
-        <div>
+        <div class="form-container">
           <h3 class="mt-4 mb-3 text-center">Please sign in</h3>
           <form class="d-flex justify-content-center flex-column">
             <div class="form-group mb-0 mt-0">
